--- a/.gitmodules
+++ b/.gitmodules
@@ -310,3 +310,6 @@
 [submodule "apbf"]
 	path = apbf
 	url = https://github.com/timvisee/apbf
+[submodule "super"]
+	path = super
+	url = https://github.com/SUPERAndroidAnalyzer/super
